# uvudec

./: .gitignore  LICENSE  README  file.txt  index.html  more  multitest  multitest2
uvudec/: .gitignore  BSD  CMakeLists.txt  CODING_STANDARDS  CONTRIBUTING  CONTRIBUTORS  COPYING  GPL  LICENSE  Makefile  Makefile.configure.in  Makefile.defaults  Makefile.depend  Makefile.interpreter  Makefile.lib  Makefile.mk  Makefile.qt.mk  Makefile.version  Makefile.version.in  README  TODO  config  config.h  configure.ac  main.cpp  main.h  manpage  test.cpp  uv_debug.cpp  uv_debug.h  uv_error.cpp  uv_error.h  uv_log.cpp  uv_log.h  uv_md5.cpp  uv_md5.h  uv_md5_GNU.cpp  uv_md5_GNU.h  uv_util.cpp  uv_util.h  (+57 more)
uvudec/GUI/: .gitignore  CMakeLists.txt  GUI.cpp  GUI.h  Makefile  analysis_action.cpp  analysis_action.h  analysis_thread.cpp  analysis_thread.h  assembly_data.cpp  assembly_data.h  assembly_data_iterator.cpp  format.cpp  format.h  lock.cpp  lock.h  main.cpp  main.h  project.cpp  project.h  string_data.cpp  string_data.h  string_data_iterator.cpp  uvd_GUI.cpp  uvd_GUI.h  uvd_GUI_analysis_thread.cpp  uvd_GUI_analysis_thread.h  uvd_analysis_action.cpp  uvd_analysis_action.h  uvd_project.cpp  uvd_project.h  uvudec.ui
uvudec/ar2pat/: Makefile
uvudec/assembly/: uvd_address.cpp  uvd_address.h  uvd_binary_function.cpp  uvd_binary_function.h  uvd_binary_symbol.cpp  uvd_binary_symbol.h  uvd_cpu.cpp  uvd_cpu.h  uvd_cpu_vector.cpp  uvd_cpu_vector.h  uvd_instruction.cpp  uvd_instruction.h  uvd_opcode.cpp  uvd_opcode.h  uvd_operand.cpp  uvd_register.cpp  uvd_register.h
uvudec/bin2obj/: CMakeLists.txt  Makefile  Makefile.old  main.cpp
uvudec/coff2pat/: Makefile
uvudec/compiler/: uvd_compiler.h  uvd_compiler_assembly.cpp  uvd_compiler_assembly.h  uvd_compiler_gcc.cpp  uvd_compiler_gcc.h
uvudec/core/: Makefile  main.cpp  main.h  uvd.cpp  uvd.h  uvd_analysis.cpp  uvd_analysis.h  uvd_analysis_db.cpp  uvd_analysis_db.h  uvd_analyzer.cpp  uvd_analyzer.h  uvd_core_event.h  uvd_decompiler.cpp  uvd_decompiler.h  uvd_iterator.cpp  uvd_iterator.h
uvudec/data/: architectures.txt  uvd_data.cpp  uvd_data.h  uvd_data_chunk.cpp  uvd_data_file.cpp  uvd_data_memory.cpp  uvd_data_placeholder.cpp
uvudec/doc/: Makefile  appendix.tex  object_file_types.txt  uvudec.aux  uvudec.tex  uvudec_exe.tex  uvudec_exe_help.tex
uvudec/elf/: uvd_elf.cpp  uvd_elf.h  uvd_elf_data.cpp  uvd_elf_header.cpp  uvd_elf_header.h  uvd_elf_init.cpp  uvd_elf_relocation.cpp  uvd_elf_relocation.h  uvd_elf_string_table.cpp  uvd_elf_symbol.cpp  uvd_elf_symbol.h  uvd_elf_writer.h  uvd_elf_writter.cpp  uvd_elf_writter.h
uvudec/elf2pat/: Makefile  main.cpp
uvudec/event/: engine.h  event.cpp  event.h  events.h
uvudec/flirt/: args_property.h  config.cpp  config.h  flirt.cpp  flirt.h  function.cpp  function.h  uvd_bfd_library.cpp  uvd_bfd_library.h  uvd_config_flirt.cpp  uvd_config_flirt.h  uvd_elf_library.cpp  uvd_elf_library.h  uvd_flirt.cpp  uvd_flirt.h  uvd_flirt_args.cpp  uvd_flirt_args.h  uvd_flirt_args_property.h  uvd_flirt_bfd.cpp  uvd_flirt_function.cpp  uvd_flirt_function.h  uvd_flirt_pattern.cpp  uvd_flirt_pattern.h  uvd_flirt_pattern_bfd.cpp  uvd_flirt_pattern_bfd.h  uvd_flirt_pattern_uvd.cpp  uvd_flirt_pattern_uvd.h  uvd_flirt_signature.cpp  uvd_flirt_signature.h  uvd_flirt_signature_format.cpp  uvd_flirt_signature_io.cpp  uvd_flirt_signature_tree.h  uvd_flirt_signature_tree_basic_node.cpp  uvd_flirt_signature_tree_hash_node.cpp  uvd_flirt_signature_tree_leading_node.cpp  uvd_flirt_signature_writer.cpp  uvd_flirt_signature_writer.h  uvd_library.cpp  uvd_library.h  uvd_srecord_package_library.cpp  (+1 more)
uvudec/flirtutil/: CMakeLists.txt  Makefile  Makefile.old  main.cpp
uvudec/hash/: uvd_crc.cpp  uvd_crc.h  uvd_md5.cpp  uvd_md5.h
uvudec/init/: uvd_arg.cpp  uvd_arg.h  uvd_arg_property.h  uvd_arg_util.cpp  uvd_arg_util.h  uvd_config.cpp  uvd_config.h  uvd_config_interpreter.cpp  uvd_config_interpreter.h  uvd_config_symbol.cpp  uvd_config_symbol.h  uvd_config_symbols.cpp  uvd_init.cpp  uvd_init.h  uvd_options.cpp  uvd_options.h  uvd_symbol.cpp
uvudec/interpreter/: uvd_interpreted_instruction.cpp  uvd_interpreted_instruction.h  uvd_interpreter.cpp  uvd_interpreter.h  uvd_javascript.cpp  uvd_javascript.h  uvd_javascript_spiderape.cpp  uvd_javascript_spiderape.h  uvd_javascript_spidermonkey.h  uvd_lua.cpp  uvd_lua.h  uvd_operator.cpp  uvd_operator.h  uvd_python.cpp  uvd_python.h  uvd_python_api.cpp  uvd_python_exec.cpp
uvudec/language/: uvd_c_decompiler.h  uvd_format.cpp  uvd_format.h  uvd_language.cpp  uvd_language.h
uvudec/libuvudec/: .gitignore  CMakeLists.txt  Makefile  Makefile.old  libuvudec.pc.in
uvudec/licscan/: README  licscan.ui
uvudec/obj2pat/: CMakeLists.txt  Makefile  Makefile.old  main.cpp
uvudec/omf2pat/: Makefile
uvudec/pat2sig/: CMakeLists.txt  Makefile  main.cpp
uvudec/plugin/: .gitignore  CMakeLists.txt  Makefile  Makefile.mk  Makefile.old  plugin.cpp  plugin.h
uvudec/project/: uvd_file_extensions.h
uvudec/python/: .gitignore  Makefile  gen_typemaps.py  test.py  uvudec.i  wrappers.cpp  wrappers.h
uvudec/relocation/: uvd_relocatable_data.cpp  uvd_relocatable_element.cpp  uvd_relocation.h  uvd_relocation_fixup.cpp  uvd_relocation_manager.cpp  uvd_simple_relocation_fixup.cpp
uvudec/testing/: CMakeLists.txt  Makefile  Makefile.old  assembly.cpp  assembly.h  bin2obj.cpp  bin2obj.h  block.cpp  block.h  common_fixture.cpp  common_fixture.h  flirt.cpp  flirt.h  flirtutil.cpp  flirtutil.h  libuvudec.cpp  libuvudec.h  main.cpp  main.h  main_hook.cpp  main_hook.h  obj2pat.cpp  obj2pat.h  object.cpp  object.h  pat2sig.cpp  plugin.cpp  plugin.h  progress_listener.h  uvd_test.cpp  uvd_test.h  uvdobjgb.cpp  uvdobjgb.h  uvudec.cpp  uvudec.h  uvudec_main_hook.cpp
uvudec/util/: io.cpp  io.h  uvd_ascii_art.cpp  uvd_ascii_art.h  uvd_benchmark.cpp  uvd_benchmark.h  uvd_debug.cpp  uvd_debug.h  uvd_error.cpp  uvd_error.h  uvd_log.cpp  uvd_log.h  uvd_priority_list.cpp  uvd_priority_list.h  uvd_string_writer.cpp  uvd_string_writter.cpp  uvd_string_writter.h  uvd_types.cpp  uvd_types.h  uvd_util.cpp  uvd_util.h  (+4 more)
(+708 files in other folders)
